--- a/config.toml
+++ b/config.toml
@@ -18,138 +18,16 @@ ignore_colors = [
 "2" = 5
 "3" = 10
 
-[[structure]]
-name = "flaguk"
-file = "bonjwa/uk_flag_pixelart.png"
-startx = 666
-starty = 170
-priority = 10
-
-
-[[structure]]
-name = "free-iran-flagge"
-file = "bonjwa/Free_Iran_Flagge.png"
-startx = 1555
-starty = 381
-priority = 1
-
-
-[[structure]]
-name = "bonjwa-logo29"
-file = "bonjwa/Bonjwa_Logo_29x29.png"
-startx = 782
-starty = 134
-priority = 10
-
-
-[[structure]]
-name = "bonjwa-matteo-marius"
-file = "bonjwa/Matteo-Marius-arm-dick-höher-v3.png"
-startx = 713
-starty = 115
-priority = 5
-
-[[structure]]
-name = "prinz"
-file = "bonjwa/prinz3.png"
-startx = 666
-starty = 131
-priority = 1
-
-[[structure]]
-name = "bonjwa-peepo2"
-file = "bonjwa/peepo-1px-breiter.png"
-startx = 688
-starty = 132
-priority = 1
-
-[[structure]]
-name = "kekluckeye"
-file = "bonjwa/auge.png"
-startx = 710
-starty = 156
-priority = 1
-
-[[structure]]
-name = "FlagArmenia"
-file = "bonjwa/armenia_flag.png"
-startx = 666
-starty = 157
-priority = 1
-
-[[structure]]
-name = "HeartArmenia"
-file = "bonjwa/heart_bonjwa_armenia.png"
-startx = 698
-starty = 154
-priority = 1
-
-[[structure]]
-name = "HeartUK"
-file = "bonjwa/Herz.png"
-startx = 781
-starty = 167
-priority = 2
-
-[[structure]]
-name = "HeartDE"
-file = "bonjwa/deheart.png"
-startx = 820
-starty = 134
-priority = 2
-
 #[[structure]]
-#name = "HeartDEPrinz"
-#file = "bonjwa/deheart.png"
-#startx = 685
-#starty = 134
-#priority = 2
+#name = "lurch"
+#file = "bonjwa/uk_flag_pixelart.png"
+#startx = 666
+#starty = 170
+#priority = 10
 
 [[structure]]
-name = "touri"
-file = "bonjwa/Touri_AndiDesign_11x14.png"
-startx = 810
-starty = 155
-priority = 10
-
-[[structure]]
-name = "pawn"
-file = "bonjwa/edo-pawn.png"
-startx = 1722
-starty = 385
-priority = 10
-
-[[structure]]
-name = "bonjwa-rad"
-file = "bonjwa/BonjwaRad.png"
-startx = 282
-starty = 134
-priority = 10
-
-[[structure]]
-name = "dhalus_profilbild"
-file = "bonjwa/Dhalu.png"
-startx = 301
-starty = 133
+name = "tobi"
+file = "pictures/tobi.png"
+startx = 734
+starty = 234
 priority = 1
-
-[[structure]]
-name = "torro"
-file = "bonjwa/torro.png"
-startx = 248
-starty = 129
-priority = 1
-
-[[structure]]
-name = "gans"
-file = "bonjwa/Gans.png"
-startx = 215
-starty = 145
-priority = 3
-
-[[structure]]
-name = "sukiandfriends"
-file = "bonjwa/sukiandfriends.png"
-startx = 227
-starty = 130
-priority = 2
