--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -6,7 +6,7 @@ on:
     paths:
       - '**.py'
       - 'images/**'
-      - 'bonjwa/**'
+      - 'pictures/**'
       - 'config.toml'
     branches:
       - main
