--- a/config.toml
+++ b/config.toml
@@ -20,9 +20,12 @@ ignore_colors = [
 
 [[structure]]
 name = "lurch"
-file = "pictures/gronkh-and-friends.png"
-startx = 160
-starty = -342
+#file = "pictures/gronkh-and-friends.png"
+#startx = 160
+#starty = -342
+file = "pictures/gronkh-and-friends-new.png"
+startx = 186
+starty = -335
 priority = 1
 
 [[structure]]
@@ -35,6 +38,6 @@ priority = 1
 [[structure]]
 name = "gronkh-2"
 file = "pictures/gronkh-2.png"
-startx = 211
+startx = 210
 starty = -338
 priority = 1
