--- a/config.toml
+++ b/config.toml
@@ -28,16 +28,16 @@ startx = 186
 starty = -335
 priority = 1
 
-[[structure]]
-name = "phunk"
-file = "pictures/tattoologophunkrplace.png"
-startx = 262
-starty = -288
-priority = 1
+#[[structure]]
+#name = "phunk"
+#file = "pictures/tattoologophunkrplace.png"
+#startx = 262
+#starty = -288
+#priority = 1
 
-[[structure]]
-name = "gronkh-2"
-file = "pictures/gronkh-2.png"
-startx = 210
-starty = -338
-priority = 1
+#[[structure]]
+#name = "gronkh-2"
+#file = "pictures/gronkh-2.png"
+#startx = 210
+#starty = -338
+#priority = 1
