Temp added ikea

--- a/config.toml
+++ b/config.toml
@@ -49,9 +49,9 @@ priority = 1
 #starty = -338
 #priority = 1
 
-[[structure]]
-name = "ikea-tmp"
-file = "pictures/ikea.png"
-startx = 198
-starty = -221
-priority = 1
+#[[structure]]
+#name = "ikea-tmp"
+#file = "pictures/ikea.png"
+#startx = 198
+#starty = -221
+#priority = 1
