Added new hoppy pos

--- a/config.toml
+++ b/config.toml
@@ -55,3 +55,10 @@ priority = 1
 #startx = 198
 #starty = -221
 #priority = 1
+
+[[structure]]
+name = "hoppy-tmp"
+file = "pictures/hoppy.png"
+startx = 133
+starty = -627
+priority = 1
