--- a/config.toml
+++ b/config.toml
@@ -23,7 +23,7 @@ name = "lurch"
 #file = "pictures/gronkh-and-friends.png"
 #startx = 160
 #starty = -342
-file = "pictures/gronkh-and-friends-placeDE-update.png"
+file = "pictures/gronkh-and-friends-new.png"
 startx = 186
 starty = -335
 priority = 1
@@ -82,4 +82,11 @@ name = "suki-erweiterung"
 file = "pictures/suki-erweiterung.png"
 startx = 186
 starty = -278
+priority = 1
+
+[[structure]]
+name = "placeDE"
+file = "pictures/placeDE_Gronkh_Overlay_v2.png"
+startx = 215
+starty = -331
 priority = 1
